<resources>
    <string name="app_name">StopWatch</string>
    <string name="start">Start</string>
    <string name="reset">reset</string>
    <string name="stop">stop</string>
    <string name="text">Thanks for choosing out awesome bland tea. How do you want it serving?</string>
    <string name="temperature">Temperature:</string>
    <string name="hot">HOT</string>
    <string name="cold">cold</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
    <string name="to">To:</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string-array name="name">
        <item name="name"/>
    </string-array>
</resources>